# TobiaSVG

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  curriculum.md  main.py  pyproject.toml
dataset_cards/TobiaSVG/: README.md
dataset_cards/TobiaSVG-repair/: README.md
scripts/data/: 01_sample_dataset.py  README.md  analyze_svg_stats.py  build_repair_dataset.py  build_tobiasvg_repair_dataset.py  inspect_dataset.py  package_tobiasvg_repair_dataset.py  process_dataset.py  process_svg.py  push_dataset.py  push_repair_dataset.py  sample_dataset.py  utils.py
src/project_x/: constants.py
src/project_x/data/: __init__.py  collators.py  curriculum.py  datasets.py  loaders.py  sampling.py  task_examples.py
src/project_x/eval/: __init__.py  compare_external.py  evaluate.py  external.py  loss.py  metrics.py  render.py
src/project_x/modeling/: __init__.py  chat.py  loading.py
src/project_x/preprocessing/: __init__.py  analyze_svg_stats.py  build_dataset.py  paths.py  push_dataset.py  sample.py
src/project_x/preprocessing/repair/: __init__.py  generate.py  package.py  tobiasvg.py
src/project_x/training/: __init__.py  checkpointing.py  config.py  peft.py  train.py  utils.py
src/project_x/utils/: logger.py  svg.py
tests/: test_data_pipeline.py  test_evaluation.py  test_external_evaluation.py  test_repair_package.py  test_training.py
