[project]
name = "project-x"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cairosvg>=2.9.0",
    "datasets>=5.0.0",
    "dotenv>=0.9.9",
    "groq>=0.31.0",
    "rich>=15.0.0",
    "torch>=2.12.1",
    "transformers>=5.12.1",
]

[dependency-groups]
dev = [
    "commitizen>=4.16.4",
    "isort>=8.0.1",
    "pre-commit>=4.6.0",
    "ruff>=0.15.20",
    "ty>=0.0.56",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_provider = "pep621"
version_scheme = "pep440"

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "SIM", "UP"]

[tool.ruff.format]
quote-style = "double"
