[project]
name = "project-x"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "cairosvg>=2.9.0",
    "datasets>=5.0.0",
    "dotenv>=0.9.9",
    "google-genai>=2.10.0",
    "groq>=0.31.0",
    "huggingface-hub>=1.21.0",
    "liger-kernel==0.8.0",
    "peft>=0.19.1",
    "pillow>=12.2.0",
    "rich>=15.0.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "transformers>=5.12.1",
    "wandb>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/project_x"]

[tool.hatch.build.targets.sdist]
include = [
    "/LICENSE",
    "/README.md",
    "/pyproject.toml",
    "/scripts",
    "/src/project_x",
    "/tests",
    "/uv.lock",
]

[dependency-groups]
dev = [
    "commitizen>=4.16.4",
    "ipython>=9.15.0",
    "isort>=8.0.1",
    "pre-commit>=4.6.0",
    "pytest>=9.0.0",
    "ruff>=0.15.20",
    "ty>=0.0.56",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_provider = "pep621"
version_scheme = "pep440"

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "SIM", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
